[KED-2973] & [KED-2974] - fix metadata alignment and overlapping text (#643)
* fixed alignment issue, added '-' to empty values and setup tests

* small modification to test

* update function naming and comments

--- a/src/components/experiment-tracking/run-dataset/run-dataset.scss
+++ b/src/components/experiment-tracking/run-dataset/run-dataset.scss
@@ -61,6 +61,7 @@
   display: block;
   flex-shrink: 0;
   width: 310px;
+  word-wrap: break-word;
 
   &--single {
     width: 50%;
